syntax = "proto3";

package pb;

message Todo {
    int64 id = 1;  
    string text = 2;
    bool done = 3;  
}

message TodoList{
    repeated Todo todos = 1;
}

message Void {}
message Text {
    string text = 1;
}
message Integer{
    int64 id = 1;
}

service Todos{
    rpc AddTodo(Text) returns(Todo){}
    rpc ListTodos(Void) returns(TodoList){}
    rpc CheckTodo(Integer) returns(Todo){}
    rpc DeleteTodo(Integer) returns(Todo){}
}